<resources>
    <string name="app_name">form</string>
    <string name="a">hi</string>
    <string name="a_1">Your social links</string>\
    <string name="a_2">Here you can post your travel blog and promote your travel videos</string>
    <string name="a_3">Facebook</string>
    <string name="a_4">Limited time paid promotion</string>
    <string name="a_5">Twitter</string>
    <string name="a_6">Instagram</string>
    <string name="a_7">Promote your blog for free</string>
    <string name="a_8">Pinterest</string>
    <string name="a_9">Add to see if your social links are correct</string>
    <string name="a_10">Your partner</string>
    <string name="a_11">Alanlove</string>
    <string name="a_12">Travel Blogger</string>
    <string name="a_13">Edit profile</string>
    <string name="a_14">Charlotte</string>
    <string name="a_15">Evangeline</string>
    <string name="a_16">Geraldine</string>
    <string name="a_17">Prudence</string>
    <string name="a_18">Chief Travel Experiencer</string>
    <string name="a_19">Private tour guide</string>
    <string name="a_20">Travel youtube master</string>
    <string name="a_21">Log out</string>
    <string name="a_22">Home</string>
    <string name="a_23">Wallet</string>
    <string name="a_24">Guide</string>

    <string name="a_25">Chart</string>
    <string name="a_26">Travel plan</string>
    <string name="a_27">Hotel</string>
    <string name="a_28">Flights</string>
    <string name="a_29">CHN</string>
    <string name="a_30">21.03 6:00 AM</string>
    <string name="a_31">First Class</string>
    <string name="a_32">UK</string>
    <string name="a_33">21.03 18:00 AM</string>
    <string name="a_34">Total</string>
    <string name="a_35">Hotel (5nigh)</string>

    <string name="a_36">$886</string>
    <string name="a_37">$726</string>
    <string name="a_38">$1612</string>
    <string name="a_39">Determine the plan</string>

    <string name="a_40">Add itinerary</string>
    <string name="a_41">Day 1</string>
    <string name="a_42">Day 2</string>
    <string name="a_43">Day 3</string>
    <string name="a_44">July 14</string>
    <string name="a_45">July 15</string>
    <string name="a_46">July 16</string>

    <string name="a_47">5:30</string>
    <string name="a_48">7:30</string>
    <string name="a_49">8:30</string>
    <string name="a_50">9:30</string>

    <string name="a_51">Wake up</string>
    <string name="a_52">City tour</string>
    <string name="a_53">Sailing project</string>
    <string name="a_54">Skydiving</string>

    <string name="a_55">Add activity</string>
    <string name="a_56">Next step</string>
    <string name="a_57">Nordic Cottage</string>
    <string name="a_58">About Bail</string>
    <string name="a_59">Blue Lagoon Drive from Reykjavík, the capital of Iceland, to the southeast for about an houryou can reach Blue Lagoon, the famous</string>
    <string name="a_60">4.79</string>
    <string name="a_61">(78 reviews)</string>
    <string name="a_62">See reviews</string>
    <string name="a_63">Pricing</string>
    <string name="a_64">from $199</string>
    <string name="a_65">from $199/ night</string>
    <string name="a_66">Hotels</string>
    <string name="a_67">Plan trip</string>
    <string name="a_68">Itinerary Form</string>
    <string name="a_69">Island</string>
    <string name="a_70">Beach</string>
    <string name="a_71">Resort</string>
    <string name="a_72">12:30</string>
    <string name="a_73">14:30</string>
    <string name="a_74">17:30</string>
    <string name="a_75">21:30</string>
    <string name="a_76">Maldives</string>
    <string name="a_77">Golden beach</string>
    <string name="a_78">Coconut grove</string>
    <string name="a_79">Maldives Islands</string>
    <string name="a_80">Save the Turtles</string>
    <string name="a_81">Surfing on the sea</string>
    <string name="a_82">BBQ party by the sea</string>
    <string name="a_83">Sea blowing</string>
    <string name="a_84">View specific itinerary</string>
    <string name="a_85">Good monring</string>
    <string name="a_86">Hello,Alanlove</string>
    <string name="a_87">Maldives Island</string>
    <string name="a_88">Beach Reef</string>
    <string name="a_89">Maldives</string>
    <string name="a_90">Schedule</string>
    <string name="a_91">New Plan</string>
    <string name="a_92">Select dates</string>

    <string name="a_93">Mon</string>
    <string name="a_94">Tue</string>
    <string name="a_95">Wed</string>
    <string name="a_96">Thu</string>
    <string name="a_97">Fri</string>
    <string name="a_98">Sat</string>
    <string name="a_99">Sun</string>
    <string name="a1">March</string>
    <string name="a2">1</string>
    <string name="a3">2</string>
    <string name="a4">3</string>
    <string name="a5">4</string>
    <string name="a6">5</string>
    <string name="a7">6</string>
    <string name="a8">7</string>
    <string name="a9">8</string>
    <string name="a10">9</string>
    <string name="a11">10</string>
    <string name="a12">11</string>
    <string name="a13">12</string>
    <string name="a14">13</string>
    <string name="a15">14</string>
    <string name="a16">15</string>
    <string name="a17">16</string>
    <string name="a18">17</string>
    <string name="a20">18</string>
    <string name="a21">19</string>
    <string name="a22">20</string>
    <string name="a23">21</string>
    <string name="a24">22</string>
    <string name="a25">23</string>
    <string name="a26">24</string>
    <string name="a27">25</string>
    <string name="a28">26</string>
    <string name="a29">27</string>
    <string name="a30">28</string>
    <string name="a31">29</string>
    <string name="a32">30</string>
    <string name="a33">Query journey</string>
    <string name="a34">Send to your email</string>
    <string name="a35">Nordic Cottage</string>
    <string name="a36">Make your own private travel plan</string>
    <string name="a37">Formulate your strategy to receive wonderful gift packs</string>
    <string name="a38">Nordic Vacation Sponsor</string>
    <string name="a39">Customize your High-end travel</string>
    <string name="a40">Countless high-end entertainment facilities</string>

    <string name="a41">High-end leisure projects to choose from</string>
    <string name="a42">The world is first-class modern leisure and entertainment method</string>
    <string name="a43">Sign up free</string>
    <string name="a44">Or continue with</string>
    <string name="a45">Enter e-mail address</string>
    <string name="a46">Create a password</string>
    <string name="a47">Repeat password</string>
    <string name="a48">I have read the </string>
    <string name="a49">Terms of Service</string>
    <string name="a50">Continue</string>
    <string name="a51">Sign in</string>
    <string name="a52">Continue with Apple</string>
    <string name="a53">Continue with Facebook</string>

    <string name="a54">Alan love</string>
    <string name="a55">alanlovelq@gmail.com</string>
    <string name="a56">E-mail address</string>
    <string name="a57">**************</string>
    <string name="a58">Change</string>
    <string name="a59">Save Settings</string>
    <string name="a60">Password</string>
    <string name="a61">Authenticate</string>

    <string name="a62">Find your next trip</string>
    <string name="a63">Nordic scenery</string>
    <string name="a64">Search...</string>
    <string name="a65">Popular locations</string>
    <string name="a66">Switzerland</string>
    <string name="a67">Ilulissat Ic</string>
    <string name="a68">Western Strait</string>
    <string name="a69">Beach House</string>
    <string name="a70">Mo</string>
    <string name="a71">from $699</string>
    <string name="a72">from $726</string>

    <string name="a73">16 locations</string>
    <string name="a74">22 locations</string>
    <string name="a75">36</string>
    <string name="a76">4.9</string>
    <string name="a77">Add activity</string>
    <string name="a78">Enter the plan</string>
    <string name="a79">View other</string>
    <string name="a90">Do not have an account?</string>
    <string name="a91">Sign up</string>
    <string name="a92">Enter password</string>

</resources>