<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="402dp"
    android:layout_height="870dp"
    tools:context=".form7">
<ImageView
    android:layout_width="28dp"
    android:layout_height="28dp"
    android:src="@drawable/muiten1"
    android:layout_marginTop="70dp"
    android:layout_marginLeft="30dp"
    />

    <TextView
        android:layout_width="94dp"
        android:layout_height="33dp"
        android:text="@string/a_91"
        android:textColor="@color/c_3"
        android:textSize="@dimen/b_6"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="155dp"/>
    <ImageView
        android:layout_width="356dp"
        android:layout_height="92dp"
        android:src="@drawable/v8"
        android:layout_marginTop="135dp"
        android:layout_marginLeft="23dp"
        />

    <TextView
        android:layout_width="101dp"
        android:layout_height="26dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="262dp"
        android:text="@string/a_92"
        android:textColor="@color/c_3"
        android:textSize="@dimen/b_2"
        android:textStyle="bold"
        />
<TextView
    android:layout_width="107dp"
    android:layout_height="21dp"
    android:text="@string/a35"
    android:textSize="@dimen/b_3"
    android:textColor="@color/white"
    android:layout_marginTop="168dp"
    android:layout_marginLeft="35dp"
    />
    <TextView
        android:layout_width="169dp"
        android:layout_height="39dp"
        android:text="@string/a35"
        android:textSize="@dimen/b_10"
        android:textColor="@color/white"
        android:layout_marginTop="185dp"
        android:layout_marginLeft="35dp"
        />

    <TextView
        android:layout_width="101dp"
        android:layout_height="26dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="262dp"
        android:text="@string/a_92"
        android:textColor="@color/c_3"
        android:textSize="@dimen/b_2"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/v9"
        android:layout_marginTop="264dp"
        android:layout_marginLeft="300dp"
        />
    <TextView
        android:layout_width="51dp"
        android:layout_height="26dp"
        android:text="@string/a1"
        android:textSize="@dimen/b_2"
        android:textColor="@color/c_3"
        android:layout_marginTop="262dp"
        android:layout_marginLeft="320dp"
        />
    <ImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/v10"
        android:layout_marginTop="262dp"
        android:layout_marginLeft="364dp"
        />
    <TextView
        android:layout_width="30dp"
        android:layout_height="23dp"
        android:text="@string/a_93"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_25"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="24dp"
        />
    <TextView
        android:layout_width="26dp"
        android:layout_height="23dp"
        android:text="@string/a_94"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_25"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="81dp"
        />
    <TextView
        android:layout_width="32dp"
        android:layout_height="23dp"
        android:text="@string/a_95"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_25"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="134dp"
        />
    <TextView
        android:layout_width="26dp"
        android:layout_height="23dp"
        android:text="@string/a_96"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_25"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="197dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a_97"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_25"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="252dp"
        />
    <TextView
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:text="@string/a_98"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_25"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="299dp"
        />
    <TextView
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:text="@string/a_99"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_25"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="350dp"
        />

    <TextView
        android:layout_width="7dp"
        android:layout_height="23dp"
        android:text="@string/a2"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="152dp"
        />
    <TextView
        android:layout_width="9dp"
        android:layout_height="23dp"
        android:text="@string/a3"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="207dp"
        />
    <TextView
        android:layout_width="9dp"
        android:layout_height="23dp"
        android:text="@string/a4"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="256dp"
        />
    <TextView
        android:layout_width="9dp"
        android:layout_height="23dp"
        android:text="@string/a5"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="308dp"
        />
    <TextView
        android:layout_width="9dp"
        android:layout_height="23dp"
        android:text="@string/a6"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="359dp"
        />
    <TextView
        android:layout_width="9dp"
        android:layout_height="23dp"
        android:text="@string/a7"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="396dp"
        android:layout_marginLeft="35dp"
        />
    <TextView
        android:layout_width="9dp"
        android:layout_height="23dp"
        android:text="@string/a8"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="396dp"
        android:layout_marginLeft="94dp"
        />
    <TextView
        android:layout_width="9dp"
        android:layout_height="23dp"
        android:text="@string/a9"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="396dp"
        android:layout_marginLeft="150dp"
        />
    <TextView
        android:layout_width="9dp"
        android:layout_height="23dp"
        android:text="@string/a10"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="396dp"
        android:layout_marginLeft="207dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a11"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="396dp"
        android:layout_marginLeft="253dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a12"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="396dp"
        android:layout_marginLeft="308dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a13"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="396dp"
        android:layout_marginLeft="357dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a14"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="443dp"
        android:layout_marginLeft="33dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a15"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="443dp"
        android:layout_marginLeft="91dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a16"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="443dp"
        android:layout_marginLeft="148dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a17"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="443dp"
        android:layout_marginLeft="204dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a18"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="443dp"
        android:layout_marginLeft="254dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a20"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="443dp"
        android:layout_marginLeft="306dp"
        />
    <TextView
        android:layout_width="16dp"
        android:layout_height="23dp"
        android:text="@string/a21"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="443dp"
        android:layout_marginLeft="357dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a22"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="489dp"
        android:layout_marginLeft="31dp"
        />
    <ImageView
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:src="@drawable/eclip1"
        android:layout_marginTop="483dp"
        android:layout_marginLeft="81dp"
        />
    <ImageView
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:src="@drawable/v14"
        android:layout_marginTop="483dp"
        android:layout_marginLeft="97dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a23"
        android:textSize="@dimen/b_3"
        android:textColor="@color/white"
        android:layout_marginTop="489dp"
        android:layout_marginLeft="91dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a24"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="489dp"
        android:layout_marginLeft="146dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a25"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="489dp"
        android:layout_marginLeft="203dp"
        />
    <ImageView
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:src="@drawable/eclip1"
        android:layout_marginTop="483dp"
        android:layout_marginLeft="244dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a26"
        android:textSize="@dimen/b_3"
        android:textColor="@color/white"
        android:layout_marginTop="489dp"
        android:layout_marginLeft="252dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a27"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="489dp"
        android:layout_marginLeft="304dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a28"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="489dp"
        android:layout_marginLeft="355dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a29"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="535dp"
        android:layout_marginLeft="31dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a30"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="535dp"
        android:layout_marginLeft="91dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a31"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="535dp"
        android:layout_marginLeft="146dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/a32"
        android:textSize="@dimen/b_3"
        android:textColor="@color/c_3"
        android:layout_marginTop="535dp"
        android:layout_marginLeft="204dp"
        />

    <TextView
        android:layout_width="101dp"
        android:layout_height="26dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="596dp"
        android:text="@string/a_92"
        android:textColor="@color/c_3"
        android:textSize="@dimen/b_2"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="281dp"
        android:layout_height="50dp"
        android:text="@string/a33"
        android:textColor="@color/white"
        android:background="@drawable/bt_a4"
        app:backgroundTint="@null"
        android:layout_marginTop="632dp"
        android:layout_marginLeft="24dp"
        />
    <TextView
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:text="@string/a33"
        android:textSize="@dimen/b_2"
        android:textColor="@color/c_27"
        android:layout_marginTop="644dp"
        android:layout_marginLeft="77dp"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/v11"
        android:layout_marginTop="645dp"
        android:layout_marginLeft="42dp"
        />
    <ImageView
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/eclip1"
        android:layout_marginTop="631dp"
        android:layout_marginLeft="328dp"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/v12"
        android:layout_marginTop="645dp"
        android:layout_marginLeft="342dp"
        />
    <TextView
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:text="@string/a34"
        android:textSize="@dimen/b_2"
        android:textColor="@color/c_28"
        android:layout_marginTop="718dp"
        android:layout_marginLeft="24dp"
        />
    <ImageView
        android:layout_width="53dp"
        android:layout_height="33dp"
        android:src="@drawable/v13"
        android:layout_marginTop="714dp"
        android:layout_marginLeft="326dp"
        />
    <ImageView
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/eclip1"
        android:layout_marginTop="717dp"
        android:layout_marginLeft="350dp"
        />
    <Button
        android:layout_width="356dp"
        android:layout_height="54dp"
        android:text="@string/a_56"
        android:textSize="@dimen/b_2"
        android:textColor="@color/white"
        android:background="@drawable/bt_6"
        app:backgroundTint="@null"
        android:layout_marginTop="781dp"
        android:layout_marginLeft="24dp"
        />
</RelativeLayout>