<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="402dp"
    android:layout_height="870dp"
    tools:context=".form14"
    android:background="@color/c_11">
<TextView
    android:layout_width="144dp"
    android:layout_height="24dp"
    android:text="@string/a62"
    android:textSize="@dimen/b_2"
    android:textColor="@color/c_35"
    android:layout_marginTop="81dp"
    android:layout_marginLeft="23dp"
    />

    <TextView
        android:layout_width="199dp"
        android:layout_height="39dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="106dp"
        android:text="@string/a63"
        android:textColor="@color/c_3"
        android:textSize="@dimen/b_1"
        android:textStyle="bold" />
    <EditText
        android:layout_width="281dp"
        android:layout_height="50dp"
        android:text="@string/a"
        android:textColor="@color/white"
        android:background="@drawable/bt_a8"
        app:backgroundTint="@null"
        android:layout_marginTop="171dp"
        android:layout_marginLeft="24dp"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/v18"
        android:layout_marginTop="184dp"
        android:layout_marginLeft="42dp"
        />
    <TextView
        android:layout_width="67dp"
        android:layout_height="24dp"
        android:text="@string/a64"
        android:textSize="@dimen/b_2"
        android:textColor="@color/c_27"
        android:layout_marginTop="183dp"
        android:layout_marginLeft="77dp"
        />
    <ImageView
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/eclip1"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="328dp"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/v17"
        android:layout_marginTop="182dp"
        android:layout_marginLeft="342dp"
        />

    <TextView
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="265dp"
        android:text="@string/a65"
        android:textColor="@color/c_3"
        android:textSize="@dimen/b_8"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_width="230dp"
        android:layout_height="138dp"
        android:src="@drawable/v19"
        android:layout_marginTop="307dp"
        android:layout_marginLeft="24dp"
        />
    <ImageView
        android:layout_width="230dp"
        android:layout_height="138dp"
        android:src="@drawable/v20"
        android:layout_marginTop="307dp"
        android:layout_marginLeft="279dp"
        />
<TextView
    android:layout_width="121dp"
    android:layout_height="35dp"
    android:text="@string/a66"
    android:textSize="@dimen/b_13"
    android:textColor="@color/white"
    android:layout_marginTop="379dp"
    android:layout_marginLeft="41dp"
    />
    <TextView
        android:layout_width="62dp"
        android:layout_height="18dp"
        android:text="@string/a71"
        android:textSize="@dimen/b_4"
        android:textColor="@color/white"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="41dp"
        />
    <TextView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:text="@string/a76"
        android:textSize="@dimen/b_4"
        android:textColor="@color/white"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="410dp"
        />
    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/v24"
        android:layout_marginLeft="221dp"
        android:layout_marginTop="410dp"
        />
    <TextView
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:text="@string/a67"
        android:textSize="@dimen/b_13"
        android:textColor="@color/white"
        android:layout_marginTop="374dp"
        android:layout_marginLeft="296dp"
        />
    <TextView
        android:layout_width="61dp"
        android:layout_height="18dp"
        android:text="@string/a72"
        android:textSize="@dimen/b_4"
        android:textColor="@color/white"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="296dp"
        />

    <TextView
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="492dp"
        android:text="@string/a65"
        android:textColor="@color/c_3"
        android:textSize="@dimen/b_8"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="142dp"
        android:layout_height="200dp"
        android:src="@drawable/v21"
        android:layout_marginTop="533dp"
        android:layout_marginLeft="23dp"
        />
    <TextView
        android:layout_width="125dp"
        android:layout_height="29dp"
        android:text="@string/a68"
        android:textColor="@color/white"
        android:textSize="@dimen/b_8"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="661dp"/>
    <ImageView
        android:layout_width="142dp"
        android:layout_height="200dp"
        android:src="@drawable/v22"
        android:layout_marginTop="533dp"
        android:layout_marginLeft="190dp"
        />
    <TextView
        android:layout_width="107dp"
        android:layout_height="29dp"
        android:text="@string/a69"
        android:textColor="@color/white"
        android:textSize="@dimen/b_8"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="661dp"/>
    <ImageView
        android:layout_width="142dp"
        android:layout_height="200dp"
        android:src="@drawable/v23"
        android:layout_marginTop="533dp"
        android:layout_marginLeft="356dp"
        />
    <TextView
        android:layout_width="133dp"
        android:layout_height="29dp"
        android:text="@string/a70"
        android:textSize="@dimen/b_8"
        android:textColor="@color/white"
        android:layout_marginTop="661dp"
        android:layout_marginLeft="370dp"/>
    <TextView
        android:layout_width="70dp"
        android:layout_height="18dp"
        android:text="@string/a73"
        android:textSize="@dimen/b_4"
        android:textColor="@color/white"
        android:layout_marginTop="692dp"
        android:layout_marginLeft="57dp"/>
    <TextView
        android:layout_width="72dp"
        android:layout_height="18dp"
        android:text="@string/a74"
        android:textSize="@dimen/b_4"
        android:textColor="@color/white"
        android:layout_marginTop="692dp"
        android:layout_marginLeft="225dp"/>
    <TextView
        android:layout_width="73dp"
        android:layout_height="18dp"
        android:text="@string/a75"
        android:textSize="@dimen/b_4"
        android:textColor="@color/white"
        android:layout_marginTop="692dp"
        android:layout_marginLeft="380dp"/>
    <Button
        android:layout_width="404dp"
        android:layout_height="100dp"
        android:text="@string/a"
        android:background="@drawable/bt_3"
        app:backgroundTint="@null"
        android:layout_marginTop="774dp"
        />
    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/v4"
        android:layout_marginTop="795dp"
        android:layout_marginLeft="35dp"
        />
    <TextView
        android:layout_width="42dp"
        android:layout_height="21dp"
        android:text="@string/a_22"
        android:textColor="@color/c_7"
        android:textSize="@dimen/b_3"
        android:layout_marginTop="827dp"
        android:layout_marginLeft="28dp"
        />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/b_3"
        android:layout_marginTop="795dp"
        android:layout_marginLeft="141dp"
        />
    <TextView
        android:layout_width="42dp"
        android:layout_height="21dp"
        android:text="@string/a_23"
        android:textColor="@color/c_9"
        android:textSize="@dimen/b_3"
        android:layout_marginTop="827dp"
        android:layout_marginLeft="133dp"
        />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/b_4"
        android:layout_marginTop="795dp"
        android:layout_marginLeft="239dp"
        />
    <TextView
        android:layout_width="42dp"
        android:layout_height="21dp"
        android:text="@string/a_24"
        android:textColor="@color/c_9"
        android:textSize="@dimen/b_3"
        android:layout_marginTop="827dp"
        android:layout_marginLeft="233dp"
        />

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/h11"
        android:layout_marginTop="795dp"
        android:layout_marginLeft="341dp"
        />
    <TextView
        android:layout_width="42dp"
        android:layout_height="21dp"
        android:text="@string/a_25"
        android:textColor="@color/c_9"
        android:textSize="@dimen/b_3"
        android:layout_marginTop="827dp"
        android:layout_marginLeft="335dp"
        />
</RelativeLayout>